<resources>
    <string name="app_name">QnAapp</string>
    <string name="main_name">QnA app</string>
    <string name="profile_button">Profile</string>
    <string name="tests_button">Tests</string>
    <string name="profile_name">Name</string>
    <string name="save">Save</string>
    <string name="remember_me">Remember me</string>
    <string name="name">Name</string>
    <string name="your_name">Your name</string>
    <string name="test_1">Історія</string>
    <string name="test_2">Географія</string>
    <string name="test_3">Астрономія</string>
    <string name="test_4">Музика</string>
</resources>