<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="111dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182"
        app:srcCompat="@drawable/head" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/main_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/profileButton"
        android:onClick="startProfile"
        android:layout_width="244dp"
        android:layout_height="63dp"
        android:text="@string/profile_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.299" />

    <Button
        android:id="@+id/testsButton"
        android:onClick="startTests"
        android:layout_width="244dp"
        android:layout_height="63dp"
        android:text="@string/tests_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileButton"
        app:layout_constraintVertical_bias="0.123" />
</androidx.constraintlayout.widget.ConstraintLayout>